--- a/web_pages/account-edit.html
+++ b/web_pages/account-edit.html
@@ -7,41 +7,84 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
-
 </head>
 <body>
   <style>
-    header{
+    html{
+        
+    }
+    header {
       height: 60px;
       background-color: purple;
     }
-    .user-img-edit{
+    .user-img-edit {
       height: 150px;
       width: 150px;
     }
     .circle-btn {
-        width: 50px;
-        height: 50px;
-        border-radius: 50%;
-        background-color: #6a6e73;
-        color: white;
-        display: flex;
-        justify-content: center;
-        align-items: center;
+      width: 60px;
+      height: 60px;
+      border-radius: 50%;
+      background-color: #6a6e73;
+      color: white;
+      border: none;
+      cursor: pointer;
+      position: absolute;
+      bottom: -18px; /* Adjust this value for the distance from the bottom */
+      right: 100px; /* Adjust this value for the distance from the right */
+    }
+    body{
+        background-color:#fef7fd;
+    }
+    .icon-btns{
+       background-color: white;
         border: none;
-        cursor: pointer;
-      }
+    }
+    .details{
+        background-color: white;
+    }
   </style>
-  <header class="container-fluid d-flex justify-content-around align-items-center  text-white p-2 h4 h-200">
+  
+  <header class="container-fluid d-flex justify-content-around align-items-center text-white p-2 h4 h-200">
     Edit Account
   </header>
-  <div>
-    <img src="https://images.news18.com/ibnlive/uploads/2023/09/nayanthara-new-16942694533x2.jpg" class="rounded mx-auto d-block user-img-edit" alt="image">
-    <button class="circle-btn">
-        <i class="fas fa-edit"></i>
-      </button>
+  
+  <div class="container mt-5">
+    <div class="row justify-content-center">
+      <div class="col-md-6 position-relative">
+        <img src="https://images.news18.com/ibnlive/uploads/2023/09/nayanthara-new-16942694533x2.jpg" class="rounded mx-auto d-block user-img-edit" alt="image">
+        <button  class="circle-btn">
+          <i class="fas fa-edit"></i>
+        </button>
+      </div>
+    </div>
   </div>
  
- 
+ <div class="row mt-5 ms-4">
+    <div class="row  justify-content-center align-items-center p-2 details">
+        <i class="fas fa-user col-2"></i>
+        <p class="col h4">Abi</p>
+        <button  class="fas fa-pen col-2 icon-btns ">
+           
+        </button>
+      </div>
+ </div>
+
+ <div class="row mt-1 ms-4">
+    <div class="row  justify-content-center align-items-center p-2 details">
+        <i class="fas fa-envelope col-2"></i>
+        <p class="col h4">abi@gmail.com</p>
+        <button  class="fas fa-pen col-2 icon-btns"></button>
+      </div>
+ </div>
+
+ <div class="row mt-1 ms-4">
+    <div class="row  justify-content-center align-items-center p-2 details">
+        <i class="fas fa-phone col-2"></i>
+        <p class="col h4">87545936</p>
+        <button  class="fas fa-pen col-2 icon-btns"></button>
+      </div>
+ </div>
+
 </body>
 </html>
