--- a/web_pages/accounts.html
+++ b/web_pages/accounts.html
@@ -19,22 +19,33 @@
       height: 70px;
       width: 70px;
     }
+    .icon-btns{
+      border: none;
+      background-color:white;
+    }
   </style>
-  <header class="container-fluid d-flex justify-content-around align-items-center  text-white p-2 h4 h-200">
+  <header class="container-fluid d-flex justify-content-center align-items-center  text-white p-2 h4 h-200">
     Account
   </header>
-  <div class="container-fluid justify-content-center p-3 shadow">
-    <div class="row align-items-center">
-      <div class="col">
+
+  <div class="container-fluid  p-3 shadow">
+    <div class="row align-items-center text-center justify-content-evenly">
+
+      <div class="col col-md-4">
         <img class="user-img rounded-circle mb-2" alt="avatar1" src="https://mdbcdn.b-cdn.net/img/new/avatars/9.webp" />
       </div>
-      <div class="col-7">
+
+      <div class="col-7 col-md-4 " >
         <b class="mb-1">Abi</b>
         <p class="mb-1">abi@gmail.com</p>
       </div>
-      <div class="col ">
-        <i class="fas fa-edit ms-2"></i>
+
+      <div class="col col-md-4">
+       <button class="fas fa-edit ms-2 icon-btns">
+     
+       </button>
       </div>
+
     </div>
   </div>
   
